# oceanbench

./: .condarc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTION.md  CONTRIBUTORS.md  Dockerfile.nrt  Makefile  README.md  conda_environment.yaml  conda_environment_test.yaml  edito.Dockerfile  evaluation_template.py  glonet.npy  obs_data_test.py  pip.conf  process_specification.json  pyproject.toml  release.sh  test_mssh_load.py  test_obs.py  test_obs_data  wenhai_sample.report.ipynb  xihe_sample.report.ipynb
.github/: CODEOWNERS
LICENSES/: ISC.txt
assets/: glo12_1_degree_sample.report.ipynb  glo36v1_sample.global.report.ipynb  glo36v1_sample.py  glo36v1_sample.report.ipynb  glonet-example.ipynb  glonet1degree_sample.report.ipynb  glonet_1_degree_sample.global.report.ipynb  glonet_1_degree_sample.py  glonet_1_degree_sample.report.ipynb  glonet_demo_sample.py  glonet_eddy_demo.py  glonet_psd_demo.py  glonet_psd_demo.report.ipynb  glonet_sample.global.report.ipynb  glonet_sample.ibi.report.ipynb  glonet_sample.ipynb  glonet_sample.py  glonet_sample.report.ipynb  langya_sample.global.report.ipynb  langya_sample.py  regional_evaluation.py  wenhai_sample.global.report.ipynb  wenhai_sample.py  wenhai_sample.report.ipynb  western_med_region.json  xihe_sample.global.report.ipynb  xihe_sample.py  xihe_sample.py.license  xihe_sample.report.ipynb
challenger_datasets/: climatology.py  climatology_1_degree.py  glo12.py  glo12_1_degree.py  glo36v1.py  glonet.py  glonet_1_degree.py  langya.py  langya_1_degree.py  wenhai.py  (+5 more)
(+274 files in other folders)
