[project]
name = "oceanbench"
version = "0.0.1-alpha"
description = ""
authors = [
    {name = "Simon Lyobard",email = "slyobard@mercator-ocean.fr"},
    {name = "Mathis Bertin",email = "mbertin@mercator-ocean.fr"},
    {name = "Quentin Gaudel",email = "qgaudel@mercator-ocean.fr"},
]
readme = "README.md"
requires-python = "3.13.*"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "xarray (>=2025.1.2,<2026.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "gsw (>=3.6.19,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
oceanbench = "oceanbench.cli:run"
